--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -260,7 +260,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/ravi.jpg") top right no-repeat;
+  background: url("../img/ravi2.jpg") top right no-repeat;
   background-size: cover;
   position: relative;
 }
